# nlp

./: .gitignore  README.md  pyproject.toml
day01/: 01_jieba.py  02_pos.py  dict.txt
day02/: 01_word2vec.py  02_word_embedding.py  03_text_analyse.py  04_n_gram.py
day03/: 01_text_length_regular.py  02_RNN_API.py
day04/: 01_RNN_global_name_classify.py
day05/: 01_seq2seq.py
day06/: 01_English2French.py
day08/: dm01_input.py  dm02_encoder_element.py  dm03_encoder_sublayer.py  dm04_encoder_layer.py  dm05_encoder.py  dm06_decoder_layer.py  dm07_decoder.py  dm08_output.py  dm09_transformer.py
day10/: 01_text_classification.py  02_transformers.py
day11/: 01_transformers_pipeline.py  02_auto_model.py
day12/: 01_chinese_classification.py  02_chinese_cloze.py
